k8s/deployment-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftp-web-preview
  namespace: dev
spec:
  template:
    spec:
      containers:
      - name: app
